	- Editing does not move breakpoints
	- No warning that debugging is not performed on currently built source code
	- In editor, F7 should build.

Missing Features
----------------
- Urgent
	- It looks like 3.7 is last version that is compiled without VS, so it works with gcc paths.
		pacman -S mingw-w64-x86_64-clang
			mingw64/mingw-w64-x86_64-clang 3.9.1-3
		-std=c++14
	- use Wix to make a windows installer
	- need a better solution for VS/mingw - Msys has mingw libclang.dll, LLVM downloads has mingw version.
	- fix packages - isystem works better to hide warnings for package msys-mingw-w64
	- oovEdit:"unable to get screen size" when opening cstdio.
	- External Packages - Project Packages/ include can't have wildcard at end of path?
	- debugger needs running program console output - shows up in editor control window
	- editor undo doesn't scroll cursor into region
	- debug execution arrow doesn't clear sometimes
	- debugger doesn't have way to view reference values?
	- need better error messages for setting up debugger - should list menus in oovaide/oovedit?
	  If a build has never been done before debugging, need to describe how to build.
- General
	- release win64
	- click on top left corner of oovaide program (settings menu) is terrible.
	- __chkstk_ms error for linking .so - make sure path is set to correct version of mingw.
	- Duplicate class/function names
	- Build Java/task sequencing
	- Preserve state between sessions
- Gui
	- Need to improve analysis/build settings for filters.
	- Add External Directories button for Build Arguments dialog.
	- Optimize directory path dependencies by oovBuilder, component diagram.
	  Store path dirs with indices to allow comparing indices?
	- Changing preferences should update drawings
	- For linux, don't getPackage if not in available list.

- Source/project management
	- Add more multitasking: library symbols, loading projects

- Packages
	- BUG: doing File/New on an existing project doesn't delete package config.