@@ -5,7 +5,7 @@ INCLUDE(FindPkgConfig)
 
 set(OOVAIDE_MAJOR_VERION 0)
 set(OOVAIDE_MINOR_VERION 1)
-set(OOVAIDE_PATCH_VERION 6)
+set(OOVAIDE_PATCH_VERION 7)
 set(OOVAIDE_VERION ${OOVAIDE_MAJOR_VERSION}.${OOVAIDE_MINOR_VERSION}.${OOVAIDE_PATCH_VERSION})
 
 #set(CMAKE_INSTALL_PREFIX "/usr")
