@@ -23,6 +23,12 @@
 The following lists releases in reverse chronological order.<br>
 <br>
 
+<h2>2017-5</h2>
+<ul>
+  <li>Fixed linux .deb files to load data and docs and from /usr/share/oovaide/data</li>
+</ul>
+
+
 <h2>2017-2</h2>
 <ul>
   <li>Updated CLang to 3.8 on Linux</li>
